Comment sound gimmick

--- a/01_Web_Scraping.ipynb
+++ b/01_Web_Scraping.ipynb
@@ -10,7 +10,7 @@
     "import re\n",
     "from tqdm import tqdm\n",
     "import time\n",
-    "import IPython\n",
+    "#import IPython\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium import webdriver"
    ]
@@ -127,6 +127,7 @@
    "outputs": [],
    "source": [
     "#Show next url and open website. First image needs to be selected manually.\n",
+    "#This needs to be executed for each url\n",
     "driver.get(urls[0])\n",
     "url = urls[0] \n",
     "print(url)"
@@ -138,6 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#This needs to be executed for each url\n",
     "#Remove the url from the list \n",
     "del urls[0]\n",
     "\n",
@@ -215,7 +217,7 @@
     "df.to_csv('scraping-output/results.csv', mode='a', sep=\"|\", header=False)\n",
     "\n",
     "#Audio notification\n",
-    "IPython.display.Audio(\"finished.wav\", autoplay=True)"
+    "#IPython.display.Audio(\"finished.wav\", autoplay=True)"
    ]
   },
   {
