Add some additional comments

--- a/02_Data Cleaning.ipynb
+++ b/02_Data Cleaning.ipynb
@@ -490,7 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"results_cleaned.csv\",sep=\"|\")"
+    "df.to_csv(\"posts_data.csv\",sep=\"|\")"
    ]
   },
   {
